# RASBERRY

./: .env.sample  .gitignore  README.md  help  pyproject.toml  test.py
config/: settings.py  urls.py
media/: README.md
static/: images.tar
static/css/: bootstrap.css
static/js/: fake-hw.js  i2c-hw.js  superpersistence.js  superstate.json  superui.js
supply/: admin.py  apps.py  i2c.py  models.py  urls.py  views.py
supply/fixture/: supply.json
supply/migrations/: 0001_initial.py  0002_alter_supplyswitch_adres_board_and_more.py  0003_supplyswitch_image.py  0004_alter_supplyswitch_adres_board_and_more.py  0005_supplyswitch_connected_alter_supplyswitch_image.py
supply/supervisor/: kiosk-control.js  package-lock.json  package.json  supererp.js  superpowers.js  supervisor.js
supply/templates/supply/: base.html  create.html  delite.html  home.html  on_off.html  update.html
