[project]
name = "rassberry"
version = "0.1.0"
description = ""
authors = [
    {name = "Maksim Andreev",email = "andrianov_maksim@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "django (>=5.2.1,<6.0.0)",
    "require (>=0.1.1,<0.2.0)",
    "i2cpy (>=0.1.6,<0.2.0)",
    "ipython (>=9.3.0,<10.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "smbus3 (>=0.5.5,<0.6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.2.0"
mypy = "^1.15.0"
isort = "^6.0.1"
black = "^25.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

